# Acoustic-Raytracing

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  benchmark.ps1  docker-compose.sh  rebuild.sh  run.sh
Acoustic_Raytracing/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  OptixSetup.cpp  OptixSetup.h  SampleRenderer.cpp  SampleRenderer.h  audio.cpp  audio.h  corelink.cpp  corelink.h  debug.cuh  devicePrograms.cu  kernels.cu  kernels.cuh  main.cpp  prd.h  vsproj_backup.xml
Acoustic_Raytracing/Bui/: Listener.h  Microphone.cpp  Microphone.h  SoundItem.cpp  SoundItem.h  SoundSource.cpp  SoundSource.h  constants.h  convolve.cu  convolve.cuh
common/gdt/cmake/: FindOptiX.cmake
common/portaudio/: portaudio_x64.lib
docs/: OptixClasses.tex  ProgramFlow.tex  SoundItems.tex
